# scribe

./: .gitignore  LICENSE  README.md  pyproject.toml
scribe/: __init__.py  cli.py
